fixed teaching page dark mode and updated texts
manually forces an over-ride of the dark mode default font settings in order to have a cleaner set up for teaching info (also added promises to add more)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -317,7 +317,7 @@ footer.sticky-bottom {
 
     .card {
       img {
-        width: 100%;
+        width: auto;
       }
     }
   }
@@ -426,15 +426,15 @@ footer.sticky-bottom {
       }
       .links {
         a.btn {
-          color: var(--global-text-color);
+          color: var(--global-theme-color);
           border: 1px solid var(--global-text-color);
           padding-left: 1rem;
           padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
           &:hover {
-            color: var(--global-theme-color);
-            border-color: var(--global-theme-color);
+            color: var(--global-hover-color);
+            border-color: var(--global-hover-color);
           }
         }
       }
